--- a/cw02.ipynb
+++ b/cw02.ipynb
@@ -9,7 +9,7 @@
    "outputs": [
    ],
    "source": [
-    "import coord"
+    "import fibs"
    ]
   },
   {
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "[0.0, 0.5, 1.0]"
+       "[1, 1, 2, 3]"
       ]
      },
      "execution_count": 2,
@@ -49,18 +49,31 @@
     }
    ],
    "source": [
-    "coord.coord_for(2)"
+    "fibs.fibs(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {
+     },
+     "output_type": "execute_result"
+    }
    ],
    "source": [
+    "g = fibs.fib_generator()\n",
+    "[next(g) for _ in range(5)]"
    ]
   }
  ],
