--- a/cw02.ipynb
+++ b/cw02.ipynb
@@ -75,6 +75,67 @@
     "g = fibs.fib_generator()\n",
     "[next(g) for _ in range(5)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "import converge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5497677311665408\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(converge.compute_sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6449240668982423\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(converge.compute_sum(1e-10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+   ]
   }
  ],
  "metadata": {
