edits to jupyter

--- a/cw02.ipynb
+++ b/cw02.ipynb
@@ -18,13 +18,13 @@
     "collapsed": false
    },
    "source": [
-    "# Title\n",
+    "# CW 02\n",
     "\n",
-    "names\n",
+    "Daniel, Devon, Myranda\n",
     "\n",
-    "dates\n",
+    "Feb.13, 2018\n",
     "\n",
-    "## Section\n",
+    "## Section 1\n",
     "\n",
     "### Exercise 1:"
    ]
