--- a/cw02.ipynb
+++ b/cw02.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "We got the same result.  This means that we were able to achieve our goal of creating 2 functions with different approaches to generate the first $n$ Fibonacci numbers.\n",
     "\n",
-    "### Exercise 3\n",
+    "### Exercise 3:\n",
     "\n",
     "The final exercise asked us to the compute the \"infinite sum\":\n",
     "\n",
